--- a/css/jordan.css
+++ b/css/jordan.css
@@ -126,6 +126,7 @@
 /*    background-color: black;*/
     background-repeat: no-repeat;
 }
+
 #escena_04 .palomap1 {
     width: 115px;
     height: 115px;
@@ -199,6 +200,11 @@
     top: 0%;
     pointer-events: none;
     left: 0%;}
+
+/* Prueba borrador */
+#escenario #escena_04 {
+    position: none !important;
+}
 
 #escena_04 .fondo{ 
     background-image: url("../img/jordan/esc_4_fondo.jpg");
@@ -440,7 +446,89 @@
     background-image: url("../img/jordan/sprite/s12-pez-06.png");
 }
 
+/*CSS JORDAN*/
+.jordanOpciones{
+    position: absolute;
+    top: calc(30% - 41px);
+    left: 50%;
+    z-index: 3;
+    margin-left: -465px;
+}
 
+.jordanRow{
+    display: flex;
+}
+
+.jordanOpciones img{
+    width: 100%;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.jordanCol{
+    width: 450px;
+    cursor: pointer;
+    margin: 0px 10px 0px 10px;
+}
+
+.jordanText{
+    font-weight: 700;
+    color: #FFFFFF;
+    display: flex;
+    margin: 10px 0px 10px 0px;
+    justify-content: center;
+}
+
+.jordanTextTitle{
+    font-weight: 700;
+    font-size: 20px;
+    color: #FFFFFF;
+    display: flex;
+    margin: 10px 0px 10px 0px;
+    justify-content: center;
+}
+
+#jordanOpciones{
+    display: none; /* none => block */
+}
+
+#overlayDark{
+    display: none; /* none = display  block sucede en todas las escenas*/
+}
+
+.overlayDark{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    /* display: block; */
+
+}
+
+.jordanButton{
+    text-align: center;
+    margin-top: -4px;
+    border-radius: 0px 0px 5px 5px;
+    background-color: #e53733;
+    padding: 10px 0px 10px 0px;
+}
+
+.jordanCol img:hover + .jordanButton{
+    background-color: #d6201b;
+}
+
+.jordanCol img:hover + .jordanButton2{
+    background-color: #005797;
+}
+
+.jordanButton2{
+    text-align: center;
+    margin-top: -4px;
+    border-radius: 0px 0px 5px 5px;
+    background-color: #006dbd;
+    padding: 10px 0px 10px 0px;
+}
+/*FIN CSS JORDAN*/
 
 
 #escena_00 .btn_interact{ top: 230px; left: 1350px; }
