--- a/css/jordan.css
+++ b/css/jordan.css
@@ -202,9 +202,25 @@
     left: 0%;}
 
 /* Prueba borrador */
-#escenario #escena_04 {
-    position: none !important;
+#escenario #escena_04 .fondo{
+    position:none;
 }
+/* #escenario #escena_04,
+#escenario #escena_04 .jordanOpciones, */
+#escenario #escena_04 .jordanOpciones .jordanRow,
+#escenario #escena_04 .jordanOpciones .jordanRow .jordanCol,
+#escenario #escena_04 .jordanOpciones .jordanRow .jordanCol .jordanButton,
+#escenario #escena_04 .jordanOpciones .jordanRow .jordanCol .jordanButton .jordanText,
+#escenario #escena_04 .jordanOpciones .jordanRow .jordanCol .jordanButton2 .jordanText
+{
+    position:relative;
+}
+#escenario #escena_04 .jordanOpciones .jordanTextTitle{
+    position: relative;
+}
+/* #jordanTextTitle2{
+    top: 200px;
+} */
 
 #escena_04 .fondo{ 
     background-image: url("../img/jordan/esc_4_fondo.jpg");
@@ -479,6 +495,7 @@
 }
 
 .jordanTextTitle{
+    align-items: center;
     font-weight: 700;
     font-size: 20px;
     color: #FFFFFF;
@@ -522,6 +539,7 @@
 }
 
 .jordanButton2{
+    width: 100%;
     text-align: center;
     margin-top: -4px;
     border-radius: 0px 0px 5px 5px;
